# frontend_rust

./: Cargo.toml  Dioxus.toml  Dockerfile  MODULE_1.md  MODULE_2.md  MODULE_3.md  MODULE_4.md  README.md  index.html
backend/: Cargo.toml
backend/src/: auth.rs  main.rs  storage.rs
frontend/: Cargo.toml  tailwind.config.js
frontend/src/: components.rs  lib.rs  pages.rs  services.rs
shared/src/: lib.rs
