[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
dioxus = { version = "0.6", features = ["fullstack", "router"] }
shared = { path = "../shared" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lucide-dioxus = "2.576.0"
reqwest = { version = "0.12", features = ["json"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "NodeList"] }
tracing = "0.1"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
server = ["dioxus/server"]

[package.metadata.dioxus.web.config]
index_html_template = "index.html"

[package.metadata.dioxus.tailwind]
config = "tailwind.config.js"
input = "input.css"
output = "public/tailwind.css"
